fix: update the spacing and icon for search bar

--- a/frontend/src/container/QueryBuilder/filters/QueryBuilderSearch/QueryBuilderSearch.styles.scss
+++ b/frontend/src/container/QueryBuilder/filters/QueryBuilderSearch/QueryBuilderSearch.styles.scss
@@ -188,7 +188,7 @@
 
 	.without-option-type {
 		display: flex;
-		gap: 4px;
+		gap: 8px;
 		align-items: center;
 		.dot {
 			height: 5px;
@@ -233,7 +233,7 @@
 		.left-section {
 			display: flex;
 			align-items: center;
-			gap: 4px;
+			gap: 8px;
 			width: 90%;
 
 			.dot {
